# picocalc_micropython_project

./: .gitignore  CMakeLists.txt  PICOCALC_SPECS.md  README.md  SCREEN_PERFORMANCE.md  build.sh  fast_scroll_test.py  fast_terminal.py  font.py  graphics.py  graphics_fast.py  i2c_scanner.py  ili9488.py  keyboard.py  main.py  pico_sdk_import.cmake  scroll_test.py  test_fast_terminal.py  test_terminal.py
display/: ili9488.py
shell/: buffer.py  terminal.py
src/: main.c  main.cpp
